<resources>
    <string name="app_name">NicVPN</string>
    <string name="app_name_full">NicVPN</string>
    <string name="action_settings">Power boot</string>
    <string name="notification_desc">NicVPN Connected</string>
    <string name="notification_channel">Service Notification</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_Restore">Reset Configuration</string>
    <string name="action_delete_log">Delete Log</string>
    <string name="data_export_successful">Successful exported configurations!!</string>
    <string name="data_export_error">[!] Data exported error!!!</string>
    <string name="permission_denied">Permission denied!!!</string>
    <string name="files_not_ready">SD Card not ready</string>
    <string name="allowedexiste">[!] Not allowed, an imported configuration exists.</string>
    <string name="file_invalid">Please try to open the file from the application manually (Oh this file does not belong to this application oh it is from previous versions).!!!</string>
    <string name="dns_field">Complete the DNS host field</string>
    <string name="enter_file_name">File name</string>
    <string name="enter_valid_file_name">Please enter a valid file name</string>
    <string name="the_file_already_exists">The entered file already exists, do you want to overwrite?</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_choose">Choose</string>
    <string-array name="tabs_array">
        <item></item>
    </string-array>
    <string name="run_status_loading">Loading…</string>
    <string name="run_status_not_running">Start Proxy</string>
    <string name="run_status_running">Connected Proxy</string>
    <string name="run_status_starting">Starting…</string>
    <string name="run_status_stopping">[!] Destroyed…</string>
    <string name="delete">Delete</string>
    <string name="ADS_APPLICATION_ID">ca-app-pub-9958394453187811~4390982328</string>
    <string name="alert_root_title">[!] Root Detected</string>
    <string name="alert_root_message">This application does not work with rooted devices. Please reinstall the operating system (Official) Error (ARM).</string>
    <string name="try_again">Please try again later.</string>
    <string name="about_us">Information</string>
    <string name="import_server">Congratulations! Imported Server</string>
    <string name="ip_label">Connected to IP</string>
    <string name="information_label">Information</string>
    <string name="host_field">Please complete the host field</string>
    <string name="warning_label">[!] WARNING</string>
    <string name="software_modified">Oh! You are using an unofficial android version or it is root! Please reinstall the operating system (Official) Error (22s2d)</string>
    <string name="malicious_apps">Oh! We have detected a malicious application, we recommend to uninstall</string>
    <string name="developer_mode">Oh! Your device has developer mode activate, please turn off this mode on settings options</string>
    <string name="usb_connected"> Oh! Your connected USB device, not allowed</string>
    <string name="rooted_device"> Oh! You are using an unofficial android version or it is root! Please reinstall the operating system (Official) Error (443322r1222d)</string>
    <string name="wifi_connection"> Oh! We have detected that you have connected to a Wi-Fi network, to continue using this application please disconnect from any Wi-Fi network</string>
    <string name="ip_connected_default">Connected to IP 0.0.0.0</string>
    <string name="import_ss">Import SS</string>
    <string name="guide_install">Guide Install</string>
    <string name="creator_label">© 2020 - 2021 UnknownDev</string>
    <string name="ping_label">Reconnection timeout:</string>
    <string name="host_label">Host</string>
    <string name="server_label">Server:</string>
    <string name="server_port_label">Port:</string>
    <string name="use_a_custom_ping">Select the reconnection time by (S)</string>
    <string name="pref_desc_stunnel_version_failed">Failed to check version</string>
    <string name="user_not_found">This device is not registered on NdCheckMate servers</string>
    <string name="share_vpn">Oh! Wi-Fi sharing not allowed on this VPN</string>
    <string name="idkey">Key</string>
    <string name="payload">Generator Payload</string>
    <string name="bug_finder">Bug finder</string>
    <string name="idProfile">[!] User (disabled)</string>
    <string name="idMoreAPP">More APP</string>
    <string name="idFeedback">Bug Report</string>
    <string name="idPolicy">Policy</string>
    <string name="idTerms">Terms</string>
    <string name="idLicense">License</string>
    <string name="idabout">About</string>
    <string name="ic_stars">Assessment</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="advance_settings_vpn">VPN Settings</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="makeDonation">Make a Donation</string>
    <string name="OPENMENU">OPEN</string>
    <string name="CLOSEDMENU">CLOSED</string>
    <string name="dialog_rate_title">Rate the application on Google Play!</string>
    <string name="dialog_rate_positive_button">Go to Google Play</string>
    <string name="dialog_rate_negative_button">Not now</string>
    <string name="dialog_new_version_title">New Version</string>
    <string name="dialog_new_version_content">New version of the application in playstore or in official telegram: https://t.me/DiamProxy</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="connection_method">Protocol</string>
    <string name="dialog_key_auth">Key Auth!</string>
    <string name="dialog_key_auth_button">Copy</string>
    <string name="dialog_key_auth_copied">Copied Successful</string>
    <string name="direct_connection">Direct</string>
    <string name="http_connection">TLS Over HTTP</string>
    <string name="payload_connection">Payload</string>
    <string name="dns_connection">HTTP Over DNS</string>
    <string name="fastdns_connection">FastDNS</string>
    <string name="DNSTT_connection">DNSTT</string>
    <string name="open_vpn_connection">OpenVPN</string>
    <string name="custom_v2ray_icc_connection">V2Ray</string>
    <string name="UDP_connection">UDP MODE [Developing]</string>
    <string-array name="connection_methods">
        <item>@string/fastdns_connection</item>
        <item>@string/DNSTT_connection</item>
        <item>@string/open_vpn_connection</item>
        <item>@string/custom_v2ray_icc_connection</item>
    </string-array>
    <string name="prof_default">Servletkeyauth: NicaDevelop-01</string>
    <string name="notify_title">Key proxy activated</string>
    <string name="notify_msg">Connected to ｢%s｣</string>
    <string name="dns_label">URL Host</string>
    <string name="payload_config_msg">Please complete the payload config field</string>
    <string name="payload_field">[!] Please type the payload</string>
    <string name="payload_stop">STOP</string>
    <string name="payload_start">START</string>
    <string name="payload_v2ray_icc">Import config from clipboard</string>
    <string name="network_connected">Authentic server key successfully</string>
    <string name="SSLCONNECTFULL">Local IP:</string>
    <string name="IntentServiceRUN">Injection method running</string>
    <string name="IntentServiceSTOP">[!] Injection method destroyed!!</string>
    <string name="stopTunnelService">[!] Service stopped!!</string>
    <string name="Startvpn">VPN started</string>
    <string name="Stopvpn">[!] VPN destroyed!!</string>
    <string name="test">[!] VPN destroyed!!</string>
    <string name="okheaders">HTTP/1.1 200 (OK) PROXY Connection Established</string>
    <string name="connectionsize">Connection size:</string>
    <string name="listeningon">Waiting VPN listening</string>
    <string name="error">[!] Error message: </string>
    <string name="close">::: Connection Closed ::: </string>
    <string name="HTTPHeaderERROR">[!] HTTP Header app read error: </string>
    <string name="HTTPHeaderreaderror">::: THREAD LOST :::</string>
    <string name="closeD">Buffer Size</string>
    <string name="errorC">[!] Error: </string>
    <string name="Configurationsent">Configuration sent</string>
    <string name="completesendsettings">Complete send settings</string>
    <string name="PINGenerator">Ping generated: </string>
    <string name="fingerprintID">ID Client Fingerprint: </string>
    <string name="Estaok" translatable="false">HTTP/1.1 200 (OK) PROXY Connection Established</string>
    <string name="EstaokVPN" translatable="false">::: HTTP/1.1 200 (OK) Connection Established :::</string>
    <string name="verifynet" translatable="false">::: INTERNET CONNECTED :::</string>
    <string name="Connectionpack">Packages: </string>
    <string name="getConfiguredPing">Seconds: </string>
    <string name="destroyForcibly">[!] Destroy Forcibly!!!</string>
    <string name="destroy">Destroy</string>
    <string name="Reconectando">Sending</string>
    <string name="Desconectado">Disconnected!!!</string>
    <string name="enter_custom_dns">Enter the DNS Server</string>
    <string name="activate_udp">Enable UDP</string>
    <string name="maskingIP">IP masking</string>
    <string name="mblockIPexport">Block IP / PORT</string>
    <string name="enter_valid_dns">Please enter a valid DNS Server</string>
    <string name="creator_labelcreditos">Credits: UnknownDev</string>
    <string name="enter_message">Enter a message</string>
    <string name="fix_background_service_title">Battery Optimization</string>
    <string name="fix_background_service_message">We recommend removing the battery restrictions this may cause disconnection in the background after a long time, remove the restrictions now to avoid disconnection from the VPN -> Don\'t optimize) or simply tap here!</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_speed_enabled">Enable SpeedMeter</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="summary_pref_local_dns_enabled">DNS processed by core‘s DNS module (Recommended, if need routing Bypassing LAN and
        mainland address)</string>
    <string name="title_pref_fake_dns_enabled">Enable FakeDNS</string>
    <string name="summary_pref_fake_dns_enabled">local DNS returns fake IP address (faster, but it may not work for some apps)</string>
    <string name="title_pref_forward_ipv6">IPv6 Enable</string>
    <string name="summary_pref_forward_ipv6">Redirect IPv6 traffic to remote.</string>
    <string name="title_pref_routing">Routing</string>
    <string name="title_pref_routing_domain_strategy">Domain strategy</string>
    <string name="title_pref_routing_mode">Routing mode</string>
    <string name="title_pref_remote_dns">Remote DNS (Optional)</string>
    <string name="summary_pref_remote_dns">DNS</string>
    <string name="title_pref_vpn_dns">DNS Resolver (IPv4/v6)</string>
    <string name="title_pref_domestic_dns">Domestic DNS (Optional)</string>
    <string name="summary_pref_domestic_dns">DNS</string>
    <string name="title_pref_local_dns_port">Local DNS port</string>
    <string name="title_concurrency">Segments VPN</string>
    <string name="summary_segments">This helps to send more requests between client and server according to your ISP this can speed up the connection, We recommend 1 to 20 segment by default this 6, when putting a lot it can be slower or cut the connection.</string>
</resources>