<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="pref_speed_enabled"
            android:summary="@string/summary_pref_speed_enabled"
            android:title="@string/title_pref_speed_enabled" />

    <EditTextPreference
        android:key="pref_concurrency"
        android:summary="@string/summary_segments"
        android:inputType="number"
        android:title="@string/title_concurrency" />

    <PreferenceCategory android:title="@string/title_vpn_settings">
        <CheckBoxPreference
                android:key="pref_local_dns_enabled"
                android:summary="@string/summary_pref_local_dns_enabled"
                android:title="@string/title_pref_local_dns_enabled" />

        <CheckBoxPreference
                android:key="pref_fake_dns_enabled"
                android:summary="@string/summary_pref_fake_dns_enabled"
                android:title="@string/title_pref_fake_dns_enabled" />

        <EditTextPreference
                android:key="pref_local_dns_port"
                android:summary="10807"
                android:inputType="number"
                android:title="@string/title_pref_local_dns_port" />

        <EditTextPreference
                android:key="pref_vpn_dns"
                android:summary="@string/summary_pref_remote_dns"
                android:title="@string/title_pref_vpn_dns" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_pref_routing">
        <ListPreference
            android:defaultValue="IPIfNonMatch"
            android:entries="@array/routing_domain_strategy"
            android:entryValues="@array/routing_domain_strategy"
            android:key="pref_routing_domain_strategy"
            android:summary="%s"
            android:title="@string/title_pref_routing_domain_strategy" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/routing_mode"
            android:entryValues="@array/routing_mode_value"
            android:key="pref_routing_mode"
            android:summary="%s"
            android:title="@string/title_pref_routing_mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_advanced">

        <CheckBoxPreference
            android:key="pref_forward_ipv6"
            android:summary="@string/summary_pref_forward_ipv6"
            android:title="@string/title_pref_forward_ipv6" />

        <EditTextPreference
                android:key="pref_remote_dns"
                android:summary="@string/summary_pref_remote_dns"
                android:title="@string/title_pref_remote_dns" />

        <EditTextPreference
                android:key="pref_domestic_dns"
                android:summary="@string/summary_pref_domestic_dns"
                android:title="@string/title_pref_domestic_dns" />

    </PreferenceCategory>
</PreferenceScreen>
