<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nicadevelop.nicavpn.MainActivity">
    <item
        android:id="@+id/mImport"
        android:orderInCategory="100"
        android:title="@string/action_import"
        android:icon="@drawable/ic_import_export_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mExport"
        android:orderInCategory="200"
        android:title="@string/action_export"
        android:icon="@drawable/ic_import_export_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mRestore"
        android:orderInCategory="300"
        android:title="@string/action_Restore"
        android:icon="@drawable/ic_restore_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mDeleteLog"
        android:orderInCategory="400"
        android:title="@string/action_delete_log"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        app:showAsAction="never"/>
</menu>